--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Salam,</h1>
-<p>My First Bootchamp 2020 Project</p>
+<p>My name is Wasim Dhamriya and this is my first Bootchamp 2020 project</p>
 </body>
 </html>
