--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>BOOTCHAMP 2020 PROJECT</title>
+<title>BOOTCAMP 2020 PROJECT</title>
 </head>
 <body>
 <h1>Salam,</h1>
-<p>My name is Wasim Dhamriya and this is my first Bootchamp 2020 project</p>
+<p>My name is Wasim Dhamriya and this is my first Bootcamp 2020 project</p>
 </body>
 </html>
