--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Salam,</h1>
-<p>My name is Wasim Dhamriya and this is my first Bootcamp 2020 project</p>
+<p>My name is Wasim Dhamriya and this is my first Bootcamp 2020 assignment</p>
 </body>
 </html>
